add links to github for each item in portfolio

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <img src='assets/facebook.png'>
             <img src='assets/javascript.png'>
             <h3>Rapport</h3>
-            <p>Rapport automates messages and emails on facebook and gmail based on custom intervals. On the front end, I designed and styled the app using Bootstrap, HTML, and CSS. On the back end, I added a Giphy feature, set up the Kron job, linked the application with Google Gmail and Contacts API.</p>
+            <p>Rapport is an <a class='textLink' target="_blank" href="https://github.com/social-rapport/rapport">open source</a> application that automates messages and emails on facebook and gmail based on custom intervals. On the front end, I designed and styled the app using Bootstrap, HTML, and CSS. On the back end, I added a Giphy feature, set up the Kron job, linked the application with Google Gmail and Contacts API.</p>
           </div>
         </div>
         <div class='row'>
@@ -159,7 +159,7 @@
             <img src='assets/node.png'>
             <img src='assets/javascript.png'>
             <h3>OkPluto</h3>
-            <p>OkPluto is a social networking app for dog owners and dog enthusiasts. The application features local search results for events, dog owners, and dog rentals. I created manage visitor and logged in states and created components to render them appropriately.</p>
+            <p>OkPluto, available on <a class='textLink' target="_blank" href="https://github.com/vivo-un/OkPluto">github</a> is social networking app for dog owners and dog enthusiasts. The application features local search results for events, dog owners, and dog rentals. I created manage visitor and logged in states and created components to render them appropriately.</p>
           </div>
           <div class='col-6'>
             <a class='image' target="_blank" href='https://okpluto-app.herokuapp.com/'>
@@ -179,7 +179,7 @@
             <img src='assets/mongo.png'>
             <img src='assets/javascript.png'>
             <h3>Persona</h3>
-            <p>Persona is a social networking application that matches users based on personality portraits derived from twitter feeds. I wrote the algorithm for determining users with similar personalities and integrated the IBM watson API.</p>
+            <p>Persona is also an <a class='textLink' target="_blank" href="https://github.com/hrr-19-athena/hrr19-athena">open source</a> social networking application that matches users based on personality portraits derived from twitter feeds. I wrote the algorithm for determining users with similar personalities and integrated the IBM watson API.</p>
           </div>
         </div>
         <div class='row'>
@@ -188,7 +188,7 @@
             <img src='assets/node.png'>
             <img src='assets/javascript.png'>
             <h3>ColorGen</h3>
-            <p>ColorGen generates color schemes and lets designers see their designs in different colors. I created this entire app.</p>
+            <p>ColorGen generates color schemes and lets designers see their designs in different colors. I created this entire app. The source code is available on <a class='textLink' href='https://github.com/vivo-un/ColorGen' target='_blank'>gitHub.</a></p>
           </div>
           <div class='col-6'>
             <a class='image' target="_blank" href='https://thawing-wave-64679.herokuapp.com/'>
