make copy email address on click

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <h2 id='contact'>Contact</h2>
         <div class='row'>
           <div class='col-12'>
-              <p>Email me at vi.uyen.vo@gmail.com or find my other profiles below:</p>
+              <p>Email me at <a class='textLink' id='myGmail'>vi.uyen.vo@gmail.com</a> or find my other profiles below:</p>
               <a target='_blank' href='https://github.com/vivo-un/'><img src='assets/github.png'></a>
               <a target='_blank' href='https://www.linkedin.com/in/vi-vo'><img src='assets/linkedin.png'></a>
               <a target='_blank' href='https://angel.co/vi-vo'><img src='assets/angel.png'></a>
