change to white nav on scroll down

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./app.js"></script>
   </head>
   <body>
-    <ul class='nav'>
+    <ul class='nav' id='main-nav'>
       <li id='home'><a href='#top'>Vi Vo</a></li>
       <li><a href='#hobby'>Hobby</a></li>
       <li><a href='#contact'>Contact</li>
