underline position in nav

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <ul class='nav' id='main-nav'>
       <li id='home'><a href='#top'>Vi Vo</a></li>
-      <li><a href='#hobby'>Hobby</a></li>
-      <li><a href='#contact'>Contact</li>
-      <li><a href='#about'>About</a></li>
-      <li><a href='#portfolio'>Portfolio</a></li>
-      <li><a href='#skills'>Skills</a></li>
+      <li><a href='#hobby' id='nav-hobby'>Hobby</a></li>
+      <li><a href='#contact' id='nav-contact'>Contact</li>
+      <li><a href='#about' id='nav-about'>About</a></li>
+      <li><a href='#portfolio' id='nav-portfolio'>Portfolio</a></li>
+      <li><a href='#skills' id='nav-skills'>Skills</a></li>
     </ul>
     <div id='top' class='landing'>
       <h1 >Vi Vo</h1>
@@ -25,7 +25,7 @@
 
   <div class='container'>
     <div class='topic'>
-      <h2><a name='skills' id='skills'>Skills</a></h2>
+      <h2 id='skills'><a name='skills'>Skills</a></h2>
       <div class='row'>
         <div class='col-4 skill backing'>
             <h3>Front-end:</h3>
@@ -249,7 +249,7 @@
         </div>
     </div>
 
-    <a href='#top'>
+    <a href='#top' class='section'>
       <div class='topic'>
         <div class='col-12'>
             <h2>Back to Top ↑</h2>
