--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </div>
 
   <div class='container'>
-    <div class='topic'>
-      <h2 id='skills'><a name='skills'>Skills</a></h2>
+    <div class='topic'  id='skills'>
+      <h2><a name='skills'>Skills</a></h2>
       <div class='row'>
         <div class='col-4 skill backing'>
             <h3>Front-end:</h3>
@@ -134,8 +134,8 @@
     </div>
 
 
-    <div class='topic'>
-      <h2 id='portfolio'>Portfolio</h2>
+    <div class='topic' id='portfolio'>
+      <h2 >Portfolio</h2>
 
         <div class='row'>
           <div class='col-6'>
@@ -201,8 +201,8 @@
 
 <div class='row contact'>
   <div class='col-6'>
-    <div class='topic'>
-      <h2 id='about'>About</h2>
+    <div class='topic'id='about'>
+      <h2 >About</h2>
         <div class='row'>
           <div class='col-12'>
             <p>I am a UI UX engineer based in Fremont, California. With <a href='http://www.cnn.com/2016/06/30/health/americans-screen-time-nielsen/'>Americans devoting more than 10 hours a day to screen time</a>, I set out to make the screen-world a better place. I became a full stack software engineer so that I can build what I imagine, but my passion, and therefore speciality, lies in the front-end space with user interface engineering and user experience design.</p>
@@ -212,8 +212,8 @@
   </div>
 
   <div class='col-6'>
-    <div class='topic'>
-      <h2 id='contact'>Contact</h2>
+    <div class='topic' id='contact'>
+      <h2>Contact</h2>
         <div class='row'>
           <div class='col-12'>
               <p>Email me at <span class='tooltip' id='myGmail'>vi.uyen.vo@gmail.com<span id='tooltipText'>Copied!</span></span> or find my other profiles below:</p>
@@ -226,8 +226,8 @@
   </div>
 </div>
 
-    <div class='topic'>
-      <h2 id='hobby'>Hobby</h2>
+    <div class='topic' id='hobby'>
+      <h2>Hobby</h2>
         <div class='row'>
           <div class='col-12'>
             <p>In my free time, I enjoy drawing and painting, wine, and food.</p>
